--- a/paper/rldm.tex
+++ b/paper/rldm.tex
@@ -41,7 +41,8 @@ Atlanta, GA 30332 \\
   concise and clear feedback on how to make this project better. Thank you
   to all my peers who also provided sincere feedback throughout the semester.
   I hope to see you all enjoying our OMSCS course in Reinforcement Learning
-  and Decision Making. It is a rewarding experience. Pun intended.
+  and Decision Making, but not before going through these lessons. It will
+  be a rewarding experience. Pun intended.
 }
 
 \startmain % to start the main 1-4 pages of the submission.
@@ -52,28 +53,31 @@ Reinforcement Learning and Decision Making is a complex subject. Being the
 focus of research of a variety of fields including artificial intelligence,
 psychology, machine learning, operations research, control theory, animal
 and human neuroscience, economics, and ethology, it is expected that the
-vast amount of available information could become counterproductive.
-Beginners often find themselves lost while trying to grasp the key concepts
-that are truly vital for understanding. Additionally, reinforcement learning
-and decision making, being a relatively new field, is often taught by
+vast amount of available information could become counterproductive if not
+handled properly. Beginners often find themselves lost while trying to grasp
+the key concepts that are truly vital for understanding. Additionally, reinforcement
+learning and decision making, being a relatively new field, is often taught by
 world-class researchers that frequently unintentionally omit explaining
 core concepts that might seem too basic \cite{gapranda}, yet remain
 fundamental. This creates a gap of knowledge that, if left unfilled, causes
-trouble when learning the more advanced topics. This presents the challenges of sparking an
-interest and keeping the students engaged throughout their entire learning experience. If the
-content is not delivered correctly, the students can quickly feel confused, lost and
-disengaged, and when that happens learning stops.
+trouble when learning the more advanced topics.
+
+These points presents some of the challenges of sparking an interest and keeping the
+students engaged throughout their entire learning experience. If the content is not
+delivered correctly, the students can quickly feel confused, lost and disengaged, and
+when that happens learning stops.
 
 \section{Sparking Curiosity}
 
 Fortunately, since reinforcement learning and decision making is studied
 by fields like animal and human neuroscience, ethology, and psychology\cite{suttons98},
-often the concepts can be taught on an intuitive level.
-Recent studies in neuroscience have shown that emotions and cognition are
-interrelated\cite{intuition}. By keeping the readings approachable I allow
-students to connect to the narratives at different levels. The notion of
-learning by interacting with an environment should be easy enough
-to understand for all of us, as this is one of the ways we learn.
+often the concepts can be taught on an direct way using ordinary examples
+in order to connect on an intuitive level. Recent studies in neuroscience have
+shown that emotions and cognition are interrelated\cite{intuition}. By keeping
+the readings approachable I allow students to connect to the narratives at different
+levels. The notion of learning by interacting with an environment should be easy enough
+to understand for all of us, as this is one of the ways we learn. Reinforcement
+learning in Artificial Intelligence has serveral similarities with Human learning.
 
 I leverage this fact and use a strategy to keep the readers engaged in the
 material.
@@ -93,23 +97,24 @@ readings.
 Additionally, and what was perhaps the most difficult part, I keep a single
 narrative throughout the sequence of concepts being presented. The intention
 here is to allow students to continue reading and use the understanding they
-accumulated in previous lessons to understand the following. Similar to what
-the direct instruction paradigm\cite{directinstruction} encourages, I provide
-with the structure and sequence on how the concepts will be presented.
+accumulate in previous lessons to understand the subsequent lessons. Similar to what
+the direct instruction paradigm\cite{directinstruction} encourages, one of the
+most important work on this project is providing with the structure and sequence
+on how the concepts are presented.
 
-The more simplistic approach is to select concepts from the entire body of
+The more traditional approach is to select concepts from the entire body of
 reinforcement learning and decision making and use different lessons to present
 different material. However, the problem with this approach is that it does
 not help the student grasp the complete picture or the connection between other topics.
 The effort to present concepts in logical sequence, despite being complex to define
-initially, not only feels more natural to present beginners, but it helps
-beginners stay engaged in the material.
+initially, not only feels more natural to present to beginners, but it helps
+beginners stay engaged in the material while they continue learning concepts.
 
 \subsection{Showing Concepts And Their Complement}
 
 Finally, in order to spark and maintain the students' curiosity, I show the
-full spectrum of a single concept. Even if just defining the opposite, I 
-still make an effort to mention it and briefly explain. Often things in
+full spectrum of a single concept. Even if just defining the opposite side, I 
+still make an effort to mention it and briefly explain it. Often things in
 life have a complementary side, that when combined can better show the qualities
 of one another. For example, explaining deterministic actions is interesting
 all by itself, but you could gain a much better understanding if I explained
@@ -119,8 +124,9 @@ strengthens student learning\cite{compare}.
 
 I paid close attention to show concepts and their complements in every
 lesson. The expectation is that this would help the students have a better
-sense of the full range of possibilities for any given point. Keeping concepts in this format,
-keeps students engaged, as concepts get progressively more and more complex.
+sense of the full range of possibilities for any given point. Keeping concepts
+in this format, keeps students engaged, as concepts get progressively more
+and more complex.
 
 \section{Removing Friction}
 
@@ -161,7 +167,7 @@ related to reinforcement learning, and be able to safely ignore other bits.
 
 \subsection{Asking For Minimal Effort}
 
-Then, I proceed to ask students to put just enough effort to get them engage.
+Then, I proceed to ask students to put just enough effort to get them engaged.
 The hands-on interaction with the notebooks are designed for beginner to get
 started with reinforcement learning. Perhaps, these students have not seen
 reinforcement learning or even machine learning code in action before. Therefore,
@@ -230,17 +236,17 @@ reinforcement learning and decision making.
 
 It is this foundation that can now make further progress easier to achieve. After
 opening this work to the community during the summer semester, I hope to receive
-help and feedback to make this project better going forward.
+help and feedback to make this project even better going forward.
 
 \subsection{Additional Notebooks}
 
 An important component for future work is the addition of notebooks. I had the capability
 to complete seven notebooks, but while trying to rush in some final work, I noticed
 the quality of the later notebooks were seriously degrading the quality of the
-project. Instead of pushing onto additional notebooks, I opted for improving the quality of previous notebooks and
-leaving the newer projects out of this release.
+project. Instead of pushing onto additional notebooks, I opted for improving the quality
+of previous notebooks and leaving the newer projects out of this release.
 
-This creates an opportunity for adding those notebooks that were removed and
+This creates an opportunity for re-adding those notebooks that were removed and
 improving them considerably. Also, the addition of new notebooks would be of
 great benefit as well.
 
@@ -257,10 +263,10 @@ Finally, one of the next steps I will be taking on is to release this project
 in different places. First, to previous students on the Slack channel of the
 Georgia Tech Study Group organization. These folks are now veterans of our course
 and would be a great source of feedback. Second, I will release to the OpenAI
-community, in an attempt to get a very diverse group, to review and provide 
-feedback. The expectation is that this feedback will be followed up with
-actual changes in the form of GitHub pull requests. This, and only this, would
-make this the project I initially envisioned. 
+community through their discussion forums in an attempt to get a very diverse group
+to review and provide feedback. The expectation is that this feedback will be
+followed up with actual changes in the form of GitHub pull requests. This, and only
+this, would make this the project I initially envisioned. 
 
 \section{Conclusion}
 
@@ -276,7 +282,7 @@ learning the ins and outs of reinforcement learning and decision making. And,
 in fact, the project recently helped an OMSCS Reinforcement Learning and
 Decision Making student find his way around the complex topic of function
 approximation in reinforcement learning. The potential, however, is bigger, and
-the path to improvement obvious in some cases. Our desire is to see this
+the path to improvement obvious in some cases. My desire is to see this
 work continue to grow into a more mature and effective way of teaching this
 amazing field.
 
