Fixing value iteration equation
Seems like a typo. In Value Iteration, we take expectation over values of next state (s_prime), so it should be old_V[s_prime] not old_V[s].

--- a/notebooks/03-planning-algorithms.ipynb
+++ b/notebooks/03-planning-algorithms.ipynb
@@ -85,7 +85,7 @@
     "        for s in S:\n",
     "            for a in A:\n",
     "                for prob, s_prime, reward, done in P[s][a]:\n",
-    "                    Q[s][a] += prob * (reward + gamma * old_V[s] * (not done))\n",
+    "                    Q[s][a] += prob * (reward + gamma * old_V[s_prime] * (not done))\n",
     "            V[s] = Q[s].max()\n",
     "        if np.all(np.abs(old_V - V) < theta):\n",
     "            break\n",
