--- a/notebooks/06-function-approximation.ipynb
+++ b/notebooks/06-function-approximation.ipynb
@@ -85,7 +85,7 @@
    "source": [
     "def action_selection(state, model, episode, n_episodes):\n",
     "    epsilon = 0.99 if episode < n_episodes//4 else 0.33 if episode < n_episodes//2 else 0.\n",
-    "    values = model.predict(state.reshape(1, 4))[0]\n",
+    "    values = model.predict(state.reshape(1, state.shape[0]))[0]\n",
     "    if np.random.random() < epsilon:\n",
     "        action = np.random.randint(len(values))\n",
     "    else:\n",
