Fixing policy improvement equation
Similar typo as reported earlier for value iteration.
s -> s_prime (because we calculate Q value based on expected value of the next state)

--- a/notebooks/solutions/03-planning-algorithms.ipynb
+++ b/notebooks/solutions/03-planning-algorithms.ipynb
@@ -751,7 +751,7 @@
     "        Qs = np.zeros(len(A), dtype=float)\n",
     "        for a in A:\n",
     "            for prob, s_prime, reward, done in P[s][a]:\n",
-    "                Qs[a] += prob * (reward + gamma * V[s] * (not done))\n",
+    "                Qs[a] += prob * (reward + gamma * V[s_prime] * (not done))\n",
     "        pi[s] = np.argmax(Qs)\n",
     "        V[s] = np.max(Qs)\n",
     "    return pi, V"
